--- a/src/app/game-description/game-description.component.html
+++ b/src/app/game-description/game-description.component.html
@@ -1,4 +1,4 @@
 <mat-card>
-    <mat-card-header> <mat-card-title>Game description</mat-card-title></mat-card-header>
-    <mat-card-content>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cumque repellat perspiciatis necessitatibus explicabo, at ut numquam pariatur magnam id aut laboriosam eveniet eos. Blanditiis modi facilis ea, asperiores illo numquam!</mat-card-content>
+    <mat-card-header> <mat-card-title>{{card ? title : 'Please pick a card'}}</mat-card-title></mat-card-header>
+    <mat-card-content>{{card ? description : 'Please click on the card stack to select the next card'}}</mat-card-content>
   </mat-card>
